[gd_scene load_steps=2 format=3 uid="uid://b5gjr4qrdvma7"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_81un3"]

[node name="GUI" type="Node2D"]
script = ExtResource("1_81un3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
color = Color(0.376471, 0.376471, 0.376471, 0.627451)

[node name="MenuItemsContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MenuItemsContainer"]
layout_mode = 2

[node name="PauseLabelContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PauseLabel" type="Label" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/PauseLabelContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButtonContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 25

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/ResumeButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="LevelSelectButtonContainer2" type="MarginContainer" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 25

[node name="LevelSelectButton" type="Button" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/LevelSelectButtonContainer2"]
layout_mode = 2
text = "Level Select"

[node name="MainMenuButtonContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 25

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/MainMenuButtonContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/ResumeButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/LevelSelectButtonContainer2/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MenuItemsContainer/VBoxContainer/MainMenuButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
